scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-one-ingress/prohibited-target/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet
spec:
  selector:
    matchLabels:
      app: aspnet
  replicas: 1
  template:
    metadata:
      labels:
        app: aspnet
    spec:
      containers:
        - name: aspnet
          imagePullPolicy: IfNotPresent
          image: mcr.microsoft.com/dotnet/samples:aspnetapp
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: aspnet
spec:
  selector:
    app: aspnet
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnet
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"

spec:
  ingressClassName: "azure-application-gateway"
  rules:
    - host: www.microsoft.com
      http:
        paths:
        - path: /aspnet
          backend:
            service:
              name: aspnet
              port:
                number: 80
          pathType: Prefix
